BrowserLifetimeHandler: Require true/false update arg

Previously tpm_firmware_update_requested might be undefined.
This makes the argument required and ensures that it is passed.

Bug: 800103
Change-Id: Ia5263d011a58f5f444b64df2e7109083c70b3daf