chrome/browser/resources/settings/about_page/about_page.js
@@ -417,7 +417,7 @@ Polymer({
 
   /** @private */
   onRelaunchAndPowerwashTap_: function() {
-    this.lifetimeBrowserProxy_.factoryReset();
+    this.lifetimeBrowserProxy_.factoryReset(false);
   },
 
   /**
