chrome/browser/resources/settings/reset_page/powerwash_dialog.js
@@ -13,7 +13,10 @@ Polymer({
 
   properties: {
     /** @public */
-    requestTpmFirmwareUpdate: Boolean,
+    requestTpmFirmwareUpdate: {
+      type: Boolean,
+      value: false,
+    }
   },
 
   /** @override */
