chrome/test/data/webui/settings/reset_page_test.js
@@ -196,7 +196,10 @@ cr.define('settings_reset_page', function() {
           const dialog = resetPage.$$('settings-powerwash-dialog');
           assertTrue(!!dialog);
           MockInteractions.tap(dialog.$.powerwash);
-          return lifetimeBrowserProxy.whenCalled('factoryReset');
+          return lifetimeBrowserProxy.whenCalled('factoryReset')
+              .then((requestTpmFirmwareUpdate) => {
+                assertFalse(requestTpmFirmwareUpdate);
+              });
         });
       }
     });
